import "ProtoPublic.proto";

message Proto80400387       // 通知弹劾帮主(主动)
{
    optional string leader_name = 1;       // 帮主名称
    optional string impeach_name = 2;       // 发起弹劾者名称
    optional int32 need_num = 3;       // 需要人数
    optional int32 now_num = 4;       // 当前人数
}

message Proto10100159       // 移出黑名单
{
    optional int64 role_id = 1;       // 
    optional int32 remove_type = 2;       // 0:移动到好友，1:完全删除
}

message Proto50100159       // 移出黑名单(返回)
{
    optional int64 role_id = 1;       // 
    optional int32 src_friend_type = 2;       // 加入前，玩家的好友类型
    optional int32 des_friend_type = 3;       // 加入后，玩家的好友类型
}

message Proto81401806       // 通知百倍返利信息（主动）
{
    optional int64 left_min = 1;       // 剩余时间（分钟）
    optional int32 buy_time = 2;       // 当前购买次数
    optional int32 buy_money = 3;       // 元宝数
    optional int32 reward_id = 4;       // 奖励id
    optional int32 show_icon = 5;       // 显示图标
}

message Proto81401807       // 通知投资计划信息
{
    optional int64 left_time = 1;       // 剩余时间（分钟）
    optional int32 index = 2;       // 当前领奖序号（0 表示 未购买）
    repeated ProtoPairObj normal_list = 3;       // 正常奖励领取状态
    repeated ProtoPairObj vip_list = 4;       // vip6额外奖励领取状态
    optional int32 is_draw = 5;       // 当天是否可以领奖
    optional int32 vip_level = 6;       // vip等级
    optional int32 show_icon = 7;       // 显示图标
}

message Proto11401811       // 领取投资计划奖励
{
    optional int32 index = 1;       // 当前序号 （第几天）
    optional int32 type = 2;       // 类型 1 普通 2 vip
}

message Proto51401811       // 领取投资计划奖励（返回）
{
    optional int32 index = 1;       // 0购买 1领奖
    optional int32 status = 2;       // 状态
}

message Proto81400112       // 伤害信息(主动)
{
    repeated ProtoLScoreInfo rank_list = 1;       // 排行列表
    optional int32 script_id = 2;       // 副本ID
}

message Proto80401032       // 通知客户端显示斗志(主动)
{
    optional int32 notify_id = 1;       // 1:盟主 2:战神 3:状元
}

message Proto50400122       // 查看斗志(返回)
{
    repeated ProtoMAttackLabel mattack_label = 1;       // 斗志详情
}

message Proto10400827       // 领取胜利奖励
{
    optional int32 index = 1;       // 索引，从0开始
}

message Proto50400827       // 领取胜利奖励(返回)
{
    optional int32 index = 1;       // 索引，从0开始
}

message Proto80100504       // 战斗信息(主动)
{
    optional int32 flag = 1;       // 阶段
    optional ProtoLMRole first = 2;       // 第一个玩家
    optional ProtoLMRole second = 3;       // 第二个玩家
    optional int32 left_time = 4;       // 剩余时间
}

message Proto80100505       // 结束提示(主动)
{
    optional int32 flag = 1;       // 输赢，0表示输
    optional string name = 2;       // 对手名字
    optional int32 stage = 3;       // 自己段位
    optional int32 score = 4;       // 自己增加积分
    optional int32 reward_id = 5;       // 自己奖励ID
}

message Proto80401033       // 请求boss释放清屏特效(主动)
{
    optional int64 boss_id = 1;       // boss唯一id
    optional int32 buff_id = 2;       // 
}

message Proto50100321       // 附近队伍（返回）
{
    repeated ProtoTeamer team_info = 1;       // 
}

message Proto10100322       // 自动接受邀请
{
    optional int32 status = 1;       // 当前状态 1勾选 0 不勾选
}

message Proto50100322       // 自动接受邀请（返回）
{
    optional int32 status = 1;       // 当前状态 1勾选 0 不勾选
}

message Proto10100323       // 自动接受申请
{
    optional int32 status = 1;       // 当前状态 1勾选 0 不勾选
}

message Proto50100323       // 自动接受申请（返回）
{
    optional int32 status = 1;       // 当前状态 1勾选 0 不勾选
}

message Proto11400135       // 红装碎片兑换
{
    optional int32 exchange_id = 1;       // 兑换id
    optional int32 amount = 2;       // 数量
}

message Proto51400135       // 红装碎片兑换(返回)
{
    optional int32 exchange_id = 1;       // 
}

message Proto50100324       // 附近玩家信息（返回）
{
    repeated ProtoTeamer near_list = 1;       // 附近玩家
    repeated ProtoTeamer league_list = 2;       // 同帮会
    repeated ProtoTeamer friend_list = 3;       // 好友
    optional ProtoThreeObj other_info = 4;       // 
}

message Proto81405011       // 璇玑宝匣面板信息
{
    optional int32 free_times = 1;       // 免费次数 剩余
    optional int32 reset_times = 2;       // 当前重置次数 0 第一次
    optional int32 game_index = 3;       // 当前局 进度（第几格）
    optional int32 game_length = 4;       // 总长度
    optional int64 reset_tick = 5;       // 重置时间
    optional ProtoThreeObj other_info = 6;       // 其他信息（优化用）
    repeated ProtoItem item_list = 7;       // 获得物品记录
}

message Proto11405012       // 璇玑宝匣摇骰子
{
    optional int32 type = 1;       // 是否使用礼券 0是 1 否
    optional ProtoThreeObj other_info = 2;       // 
}

message Proto51405012       // 璇玑宝匣摇骰子（返回）
{
    optional int32 dice_num = 1;       // 骰子数
}

message Proto81405012       // 璇玑宝匣礼物获得（主动）
{
    optional int32 gird_index = 1;       // 格子序号
    optional int32 is_get = 2;       // 是否获得
    optional int32 is_double = 3;       // 是否双倍
    repeated ProtoItem item_list = 4;       // 物品信息（单份）
    optional ProtoThreeObj other_info = 5;       // 其他信息
}

message Proto81405013       // 璇玑宝匣通关奖励
{
    optional int32 reward_id = 1;       // 奖励id
    optional ProtoThreeObj other_info = 2;       // 其他信息
}

message Proto10100214       // 商店类活动购买
{
    optional int32 index = 1;       // 活动ID
    optional int32 buy_index = 2;       // 购买索引
    optional int32 cash_coupon_use = 3;       // 使用代金券数量
    optional int32 amount = 4;       // 购买数量
}

message Proto50100214       // 商店类活动购买(返回)
{
    optional int32 index = 1;       // 活动ID
}

message Proto51401501       // 获取藏宝阁信息(返回)
{
    optional int32 day = 1;       // 第几天
    optional int32 get_status = 2;       // 奖励领取状态 0未领取 1已领取
    optional int32 refresh = 3;       // 剩余刷新时间
    optional int32 open = 4;       // 激活状态 0未激活 1已激活 2已失效
    repeated ProtoPairObj buy_status = 5;       // 购买状态
}

message Proto11401503       // 购买物品
{
    optional int32 map_id = 1;       // 物品匹配id
}

message Proto11401812       // 充值界面信息
{
    optional int32 type = 1;       // 类型
}

message Proto51401812       // 充值界面信息(返回)
{
    optional int32 left_time = 1;       // 开服活动剩余秒数
    repeated int32 fist_recharge = 2;       // 是否是第一次充值，0表示否
    optional int32 type = 3;       // 类型
}

message Proto81401102       // 主动通知成就进度
{
    repeated ProtoAchieveDetail achieve_detail = 1;       // 成就信息
}

message Proto80405020       // 玩家双休状态
{
    optional int32 status = 1;       // 0 否 1 是
    optional ProtoThreeObj other_info = 2;       // 
}

message Proto51401417       // 资源找回物品信息（返回）
{
    optional int32 activity_id = 1;       // 活动ID（活动大类）找回）
    optional int32 restore_type = 2;       // 找回方式 1免费找回 2元宝找回
    optional int32 is_all = 3;       // 是否全部找回
    repeated ProtoItem item_list = 4;       // 物品信息
    optional ProtoExpRestore restore_info = 5;       // 物品信息
    optional ProtoThreeObj other_info = 6;       // 
}

message Proto11401417       // 资源找回物品信息
{
    optional int32 activity_id = 1;       // 活动ID（活动大类）找回）
    optional int32 restore_type = 2;       // 找回方式 1免费找回 2元宝找回
    optional int32 is_all = 3;       // 是否全部找回
    optional ProtoThreeObj other_info = 4;       // 
}

message Proto50102001       // 获取轮盘活动列表(返回)
{
    repeated int32 activity_set = 1;       // 活动id列表
}

message Proto10102002       // 获取单个轮盘活动
{
    optional int32 activity_id = 1;       // 活动id
}

message Proto50102002       // 获取单个轮盘活动(返回)
{
    optional int32 activity_id = 1;       // 活动id
    optional int32 my_score = 2;       // 我的积分
    optional int32 left_tick = 3;       // 剩余时间
    optional int32 left_gold = 4;       // 奖池奖金
    repeated ProtoPersonRecord person_record = 5;       // 个人记录
    repeated ProtoServerRecord server_record = 6;       // 全服记录
    repeated ProtoSlotInfo slot_info = 7;       // 格子信息
    optional int32 now_slot_id = 8;       // 现在到达的格子id
    optional int32 reset_times = 9;       // 重置次数
    optional int32 free_times = 10;       // 剩余免费次数
    optional int32 refresh_tick = 11;       // 每日重置剩余时间
    optional int32 left_free_time = 12;       // 获取免费次数剩余时间
    optional int32 draw_limit = 13;       // 每日抽奖次数（元宝宝匣用）
    optional int32 draw_free_times = 14;       // 剩余可领免费次数
    optional int32 reward_get = 15;       // 奖励领取情况
    optional int32 nine_word_reward = 16;       // 真言奖励
    optional int32 reward_show = 17;       // 奖励reward_id
    optional int32 rank_reward_show = 18;       // 排行榜奖励reward_id
    optional int32 open_times = 19;       // 开启次数
    optional int32 reset_cost = 20;       // 重置金钱
    repeated int32 reward_location = 21;       // 已获得奖励的位置
    optional int32 total_recharge = 22;       // 总充值金额
    repeated FishDetail fish_detail = 23;       // 深海捕鱼信息
}

message Proto10102003       // 进行轮盘抽奖
{
    optional int32 activity_id = 1;       // 活动id
    optional int32 amount = 2;       // 次数
    optional int32 type = 3;       // 类型
}

message Proto50102003       // 进行轮盘抽奖(返回)
{
    optional int32 activity_id = 1;       // 活动id
    repeated int32 slot_set = 2;       // 格子id集合
    repeated ProtoPersonRecord record = 3;       // 该次抽奖记录
    optional int32 amount = 4;       // 次数
    optional int32 mult = 5;       // 倍数（元宝宝匣信息）
}

message Proto10102004       // 物品/积分兑换
{
    optional int32 activity_id = 1;       // 活动id
    optional int32 exchange_id = 2;       // 兑换id
}

message Proto50102004       // 物品/积分兑换(返回)
{
    optional int32 activity_id = 1;       // 活动id
    optional int32 cur_score = 2;       // 剩余积分
}

message Proto10102005       // 活动手动重置
{
    optional int32 activity_id = 1;       // 活动id
}

message Proto50102005       // 活动手动重置(返回)
{
    optional int32 activity_id = 1;       // 活动id
}

message Proto80400388       // boss刷新倒计时及经验加成(主动)
{
    optional int32 refresh_tick = 1;       // 刷新倒计时
    optional int32 add_exp = 2;       // 战旗祝福经验
}

message Proto80400117       // 杀怪经验通知
{
    optional int32 exp = 1;       // 经验
    optional ProtoThreeObj other_info = 2;       // 其他信息
}

message Proto80100111       // 节日活动图标
{
    optional int32 type = 1;       // 图标类型
    optional int32 state = 2;       // 0表示关，1表示开
}


